feat: remove books models
