# main.go
@@ -17,12 +17,6 @@ func main() {
 
 	v1 := app.Group("/api/v1")
 	{
-		v1.GET("/books", controllers.FindBooks)
-		v1.GET("/books/:id", controllers.FindBook)
-		v1.POST("/books", controllers.CreateBook)
-		v1.PATCH("/books/:id", controllers.UpdateBook)
-		v1.DELETE("/books/:id", controllers.DeleteBook)
-
 		v1.POST("/products", controllers.CreateProduct)
 		v1.POST("/users", controllers.CreateUser)
 		v1.POST("/sales/buy", controllers.BuyProduct)
